# RayTrayCpp2

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp2
src/inc/: camera.h2  color.h2  defines.h2  hittable.h2  hittable_list.h2  interval.h2  optional_extensions.h2  ray.h2  sphere.h2  vec3.h2
